<resources>
    <string name="app_name">AsistenciaATR</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="titulo_usuario">Usuario</string>
    <string name="ingrese_usuario">Ingrese su usuario</string>
    <string name="titulo_pass">Contraseña</string>
    <string name="ingrese_pass">Ingrese su contraseña</string>
    <string name="nombre_materia">NOMBRE DE LA MATERIA</string>
    <string name="fichar_asistencia">Fichar asistencia</string>
    <string name="scanner_qr">Scanear QR</string>
    <string name="mis_asistencias">Mis asistencias</string>
    <string name="bt_login">Login</string>
    <string name="materias">Materias:</string>
    <string name="alumno">Alumno:</string>
    <string name="error_materias">No existen materias</string>
    <string name="boton_generar">Generar:</string>
    <string name="presentes">Presentes:</string>
    <string name="fecha">Fecha: </string>
    <string name="fecha_patron">09-07-2019</string>
    <string name="mat">Base de datos</string>
    <string name="format">Formato DD-MM-AAAA</string>
</resources>
